--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.2</version>
+	<version>0.0.1snapshots</version>
 	
 	<name>maven-web-application</name>
 
@@ -102,7 +102,7 @@
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://18.218.213.228:8081/repository/boa-fe-snapshots/</url>
+	      <url>http://18.220.82.255:8081/repository/fintect-snapshots/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 	
