--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1snapshots</version>
+	<version>0.0.1</version>
 	
 	<name>maven-web-application</name>
 
@@ -96,7 +96,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://18.218.213.228:8081/repository/boa-fe-release/</url> 
+	      <url>http://18.220.82.255:8081/repository/fintect-release/</url> 
 	    </repository>
 	    
 	    <snapshotRepository>
